# devo

./: .gitignore  AGENTS.md  Cargo.toml  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh-CN.md  README.zh-Hans.md  README.zh-Hant.md  install.sh  progress.txt
.claude/: settings.local.json
.github/workflows/: github-notifications.yml  release.yml
apps/desktop/: electron-builder.yml  package.json
crates/arg0/: Cargo.toml
crates/arg0/src/: lib.rs
crates/claude-cli/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  agent_command.rs  main.rs  prompt_command.rs
crates/client/: README.md
crates/client/src/: acp_fs.rs  acp_permissions.rs  acp_terminal.rs  client_core.rs  events.rs  lib.rs  protocol_trace.rs  stdio.rs  websocket.rs
crates/code-search/: Cargo.toml
crates/code-search/src/: cache.rs  dense.rs  index.rs  lib.rs  ranking.rs  refresh.rs  service.rs  tokens.rs  watch.rs
crates/config/: README.md
crates/config/src/: app.rs  app_store_tests.rs  lib.rs  permission.rs  provider.rs  tests.rs
crates/core/: Cargo.toml  models.json
crates/core/src/: context.rs  context_pipeline.rs  durable_record.rs  execution.rs  lib.rs  logging.rs  mcp.rs  model_binding.rs  model_catalog.rs  model_preset.rs  query.rs  session.rs  skills.rs
crates/core/tests/: L1_basic_loop.rs  L3_budget_context.rs  L4_lifecycle.rs  context_limit_compaction.rs  pty_sandbox_e2e.rs  real_llm_e2e.rs
crates/execpolicy/: BUILD.bazel  Cargo.toml  README.md
crates/execpolicy/src/: amend.rs  main.rs  parser.rs  policy.rs  rule.rs
crates/execpolicy/tests/: basic.rs
crates/linux-sandbox/: Cargo.toml
crates/linux-sandbox/src/: lib.rs  main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: acp.rs  acp_auth.rs  acp_capabilities.rs  acp_client_io.rs  acp_common.rs  acp_content.rs  acp_event_to_update.rs  acp_session.rs  acp_session_config.rs  acp_session_mode.rs  acp_session_update.rs  acp_ts.rs  agent.rs  approval.rs  command_exec.rs  connection.rs  conversation.rs  event.rs  goal.rs  lib.rs  model.rs  permissions.rs  protocol.rs  provider_vendor.rs  reasoning_effort.rs  reference_search.rs  request_user_input.rs  response.rs  role.rs  sandbox.rs  session.rs  skill.rs  slash_command.rs  task.rs  truncation.rs  turn.rs  user_input.rs
crates/protocol/tests/: acp_ts_generation.rs
crates/provider/src/: anthropic.rs  dsml.rs  error.rs  http.rs  openai.rs  provider.rs  response.rs  router.rs
crates/provider/tests/: openai_chat_completions_stream.rs  openai_responses_stream.rs  provider_http.rs
crates/rmcp-client/: LICENSE
crates/rmcp-client/src/: auth_status.rs  oauth.rs  perform_oauth_login.rs  utils.rs
crates/rmcp-client/tests/: process_group_cleanup.rs  resources.rs  streamable_http_test_support.rs
crates/safety/: Cargo.toml
crates/safety/src/: lib.rs
crates/safety/src/permission/: bash_command_splitting.rs  file_access_model.rs  mod.rs  policy.rs  rules.rs  shell_access.rs  types.rs
crates/safety/tests/: permission_policy.rs
crates/sandbox/: Cargo.toml
crates/sandbox-network-proxy/: Cargo.toml
crates/sandbox-network-proxy/src/: lib.rs
crates/sandbox/src/: bwrap.rs  bwrap_placeholder.rs  child_net.rs  denial.rs  lib.rs  linux_helper.rs  logging.rs  managed_network.rs  network_policy.rs  paths.rs  profiles.rs  seatbelt.rs  types.rs  wrap.rs
crates/sandbox/src/deny/: glob.rs  mod.rs
crates/sandbox/tests/: deny_paths_e2e.rs  integration_test.rs  wrap_e2e.rs
crates/server/: Cargo.toml
crates/server/src/: approval.rs  approval_reviewer.rs  bootstrap.rs  client.rs  exec_policy_store.rs  execution.rs  goal_durable.rs  lib.rs  persistence.rs  projection.rs  protocol.rs  provider_config.rs  runtime.rs  sandbox_profile.rs  session.rs  session_context.rs  singleton.rs  subagent.rs  titles.rs  tool_actions.rs  transport.rs  turn.rs  windows_tray.rs
crates/server/tests/: acp_permission_tool_status_contract.rs  acp_session_contract_e2e.rs  acp_session_delete.rs  acp_session_lifecycle.rs  cli_log_failures.rs  command_exec.rs  deep_research_boundary_failure.rs  deep_research_e2e.rs  end_to_end.rs  goal_continuation.rs  goal_title_generation.rs  goal_update_completion.rs  model_config_e2e.rs  persistence_resume.rs  protocol_contract.rs  provider_failure_reporting.rs  provider_routing.rs  sandbox_approval_parity.rs  session_fork_persistence.rs  session_rollback_persistence.rs  session_sandbox_profile.rs  skills_integration.rs  subagent_lifecycle.rs  turn_start_persistence.rs  (+1 more)
crates/tools/: Cargo.toml
crates/tui/: Cargo.toml  README.md
crates/windows-sandbox/: BUILD.bazel  Cargo.toml  README.md  sandbox_smoketests.py
crates/windows-sandbox/src/: allow.rs  audit.rs  cap.rs  capture_stub.rs  deny_read_resolver.rs  deny_read_state.rs  desktop.rs  elevated_impl.rs  helper_materialization.rs  identity.rs  launch.rs  lib.rs  logging.rs  otel_stub.rs  path_util.rs  request_adapter.rs  resolved_permissions.rs  sandbox_utils.rs  setup.rs  setup_error.rs  spawn_prep.rs  stdio_bridge.rs  string_util.rs  wfp.rs  wfp_setup.rs  windows_impl.rs  workspace_acl.rs  wrapper.rs  wrapper_tests.rs
crates/windows-sandbox/src/conpty/: mod.rs
crates/windows-sandbox/src/elevated/: ipc_framed.rs  runner_client.rs  runner_pipe.rs
crates/windows-sandbox/src/protocol/: config_types.rs  legacy_protocol.rs  mod.rs  models.rs  permissions.rs
crates/windows-sandbox/src/pty/: conpty.rs  mod.rs  process.rs  psuedocon.rs  windows_input.rs
crates/windows-sandbox/src/unified_exec/: mod.rs  tests.rs
crates/windows-sandbox/src/unified_exec/backends/: elevated.rs  elevated_tests.rs  legacy.rs  windows_common.rs
crates/windows-sandbox/src/wfp/: filter_specs.rs
docs/: configuration.ja.md  configuration.md  configuration.ru.md  configuration.zh-Hans.md  configuration.zh-Hant.md  tui-chat-composer.md
docs/plans/: 2026-04-18-github-notification-design.md
notifications/: debug-log.txt  github-activity.jsonl  github-meta.json
specs/L1/: L1-REQ-APP-012-privacy-data-ownership.md
specs/traceability/: l1_to_l2.md  verification.md
(+322 files in other folders)
