[package]
description = "Secret redaction, approval policy, and sandbox policy contracts"
edition.workspace = true
license.workspace = true
name = "devo-safety"
version.workspace = true

[dependencies]
async-trait = { workspace = true }
devo-config = { workspace = true }
devo-util-shell-command = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["full"] }
